ELS Code/main/default/objects/Raw_Client__c/Raw_Client__c.object-meta.xml
<CustomObject>
    <label>Raw Client</label>
    <nameField>
        <label>Raw Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>