ELS Code/main/default/objects/Raw_Client__c/fields/Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Time__c</fullName>
    <label>Create Time</label>
    <type>Date</type>
</CustomField>