ELS Code/main/default/objects/Raw_Client__c/fields/Prov_State__c.field-meta.xml
<CustomField>
    <fullName>Prov_State__c</fullName>
    <label>Prov State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>